--- a/04_project/css/designes.css
+++ b/04_project/css/designes.css
@@ -6,6 +6,11 @@
     font-size: 12px;
     background-color: #ffffff;
     box-shadow:0 1px 3px rgba(34, 25, 25, 0.5);
+    border-radius: 10px;
+}
+
+.paper-holder img {
+    border-radius: 7px;
 }
 
 .paper-description { 
