프로젝트 진행 중

--- a/04_project/css/designes_2.css
+++ b/04_project/css/designes_2.css
@@ -6,35 +6,17 @@
     font-size: 12px;
     background-color: #ffffff;
     box-shadow:0 1px 3px rgba(34, 25, 25, 0.5);
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
+    border-radius: 10px;
 }
 .paper-holder img {
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
+    border-radius: 10px;
 }
 
-/* .paper-description { 
+.paper-description { 
     margin : 10px 0;
-} */
-
-.paper-content {
-    margin : -10px 0 -10px;
-    padding : 10px 10px 10px;
-    background-color: #ff0404;
-    overflow: hidden;
 }
 
-.paper-link {
-    display : block;
-    float:left;
-}
 
-.paper-text {
-    float: right;
-    width: 150px;
-    margin-left:10px;
-}
 
  /* 섹션 스타일 */
 
@@ -42,6 +24,15 @@
     width: 920px;
     margin: 0 auto; /* 중앙으로 가게 만듬 */
 }
+
+/* 라이트박스 크기 조절 */
+@media(max-width:1050px) {
+    /* 라이트 박스 세로로 출력 */
+}
+@media(min-width:1051px) {
+    /* 라이트 박스 가로로 출력 */
+}
+
 
 /* 세줄 */
 @media(max-width: 919px) {
